Improved compatibility with Java 16+.
Replaced reflective operations with non-reflective equivalents.